--- a/src/Luk.html
+++ b/src/Luk.html
@@ -24,7 +24,7 @@
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
               <img 
-              src="../img/logo.png"
+              src="../img/loguinho.png"
               />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
                     Sapatinhos
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#"></a></li>
                     <li><a class="dropdown-item" href="#">Another action</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -67,13 +67,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/bubble.png" class="d-block w-100" alt="...">
+              <img src="../img/carrossel um.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../img/lux.webp" class="d-block w-100" alt="...">
+              <img src="../img/ahri-1024x576.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../img/ju.webp" class="d-block w-100" alt="...">
+              <img src="../img/ahri-1024x576.jpg" class="d-block w-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
