--- a/src/Rinex.html
+++ b/src/Rinex.html
@@ -22,7 +22,9 @@
         <div id="menu" class="col-12">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Feminino</a>
+              <a class="navbar-brand" href="#">
+                <img src="../img/logo da barra.png" alt="" />
+              </a>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -38,11 +40,11 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#"
-                      >Calçados</a
+                      >Acessórios</a
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Casa</a>
+                    <a class="nav-link" href="#">Calçados</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a
@@ -53,7 +55,7 @@
                       data-bs-toggle="dropdown"
                       aria-expanded="false"
                     >
-                      Infantil
+                      Ofertas
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#">Action</a></li>
@@ -74,7 +76,7 @@
                       href="#"
                       tabindex="-1"
                       aria-disabled="true"
-                      >Ofertas</a
+                      >Roupas</a
                     >
                   </li>
                 </ul>
@@ -124,21 +126,21 @@
             <div class="carousel-inner casa">
               <div class="carousel-item active">
                 <img
-                  src="../img/carrossel um.png"
+                  src="../img/TESTANDO CARROSSEL.png"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="../img/carrossel dois.png"
+                  src="../img/TESTANDO CARROSSEL DOIS.png"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="../img/carrossel tres.png"
+                  src="../img/testando carrossel tres.png"
                   class="d-block w-100"
                   alt="..."
                 />
