--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <div class="hero">
       <nav>
         <ul>
-          <img src="../img/bannerfloryssss.png" width="20%" />
+          <img src="../img/bannerfloryssss.png" class="akak" width="20%" />
           <li><a href="#">Inicio</a></li>
           <li class="nav-item dropdown">
             <a
@@ -57,9 +57,30 @@
           <button class="btn btn-outline-success" type="submit">
             Pesquisar
           </button>
+          </div>
         </form>
       </nav>
-    </div>
+      <h1>Section Flexbox</h1>
+        <section class="flex">
+          <div>
+              <img src="../img/Yanyt-removebg-preview.png">
+              <p>legenda</p>
+          <div>
+              <img src="../img/Yanyt-removebg-preview.png">
+              <p>legenda</p>
+          <div>
+              <img src="../img/Yanyt-removebg-preview.png">
+              <p>legenda</p>
+          <div>
+              <img src="../img/Yanyt-removebg-preview.png">
+              <p>legenda</p>
+                  
+          <div>
+             <img src="../img/Yanyt-removebg-preview.png">
+            <p>legenda</p>
+          <div>
+        </section>      
+        </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
