--- a/src/Rinex.html
+++ b/src/Rinex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="./INDEX.CSS" rel="stylesheet" <meta charset="UTF-8" />
+    <link href="./INDEX.CSS" rel="stylesheet" charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paradise!</title>
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link href="./INDEX.CSS"/ rel="stylesheet">
+    <link href="./INDEX.CSS/" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
@@ -58,15 +58,17 @@
                       Ofertas
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
                       <li>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Beleza</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"
+                          >Bolsas e acessórios</a
+                        >
                       </li>
                       <li><hr class="dropdown-divider" /></li>
                       <li>
-                        <a class="dropdown-item" href="#"
-                          >Something else here</a
-                        >
+                        <a class="dropdown-item" href="#">Coleções passadas</a>
                       </li>
                     </ul>
                   </li>
@@ -170,10 +172,10 @@
               ></span>
               <span class="visually-hidden">Next</span>
             </button>
-         </ div>
-          <img src="../img/testando mais uma vez.png"
           </div>
+          <img src="../img/testando mais uma vez.png" />
         </div>
+
         <div id="cards" class="row mt-2 justify-content-center ms-0">
           <div class="col-4">
             <div class="card">
@@ -201,8 +203,67 @@
               </div>
             </div>
           </div>
-          <img src="../img/testando uma segunda vez.png" alt="barra" style="width: 500%"> 
-
+          <img
+            src="../img/testando uma segunda vez.png"
+            alt="barra"
+            style="width: 500%"
+          />
+        </div>
+        <div id="carouselDois" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselDois"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselDois"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselDois"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../img/camp one.jpg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="../img/camp dois.jpg" class="d-block w-100" alt="..." />
+            </div>
+            <div class="carousel-item">
+              <img src="../img/camp tres.jpg" class="d-block w-100" alt="..." />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselDois"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselDois"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
