--- a/src/index.html
+++ b/src/index.html
@@ -96,90 +96,158 @@
             height="500px"
           />
         </div>
-        <div id="qs" class="row">
-          <div class="col-4">
-            FOTO
+        <div id="qs" class="col-12">
+          <div class="row">
+            <div class="col-4">foto</div>
+            <div class="col-8">texto</div>
+            <div class="col-4">
+              Nos a G.Art somos uma galeria para todos os artistas do mundo
+            </div>
           </div>
-        <div class="col-8">
-          TEXTO
-          </div>
-        <div class="col-4">
-          NOS A TECKART SOMOS UMA GALERIA PARA TODOS ARTISTAS DO MUNDO
         </div>
-      </div>
-    </div>
-        <div id="promo">
-          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div id="promo" class="col-12">
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="c:\Users\Mobile\Desktop\galeria\7.jfif" class="d-block w-100" alt="...">
+                <img
+                  src="c:\Users\Mobile\Desktop\galeria\7.jfif"
+                  class="d-block w-100"
+                  alt="..."
+                />
               </div>
               <div class="carousel-item">
-                <img src="c:\Users\Mobile\Desktop\galeria\7.jfif" class="d-block w-100" alt="...">
+                <img
+                  src="c:\Users\Mobile\Desktop\galeria\7.jfif"
+                  class="d-block w-100"
+                  alt="..."
+                />
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img
+                  src="c:\Users\Mobile\Desktop\galeria\7.jfif"
+                  class="d-block w-100"
+                  alt="..."
+                />
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleControls"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
               <span class="visually-hidden">Next</span>
             </button>
           </div>
         </div>
-        
-          />Box 3
-        </div>
+
+        Box 3
         <div id="tc">
           <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
+            src="c:\Users\Mobile\Desktop\galeria\7.jfif"
             width="100%"
             height="500px"
           />Box 4
         </div>
-        <div id="tc">
+        <div id="tc1">
           <img
-            src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
+            src="c:\Users\Mobile\Desktop\galeria\7.jfif"
             width="100%"
             height="500px"
-            />Box 5
+          />Box 5
         </div>
-          <div id="tc">
-            <img
-              src="../img/bdd231b3-c3e1-41cf-8fb4-b62ba0d9cbd3.jpg"
-              width="100%"
-              height="500px"
+        <div id="tc2">
+          <img
+            src="c:\Users\Mobile\Desktop\galeria\7.jfif"
+            width="100%"
+            height="500px"
+          />
         </div>
         <div id="cards" class="row mt-2 justify-content-center ms-0">
           <div class="col-4">
             <div class="card">
-              <img src="c:\Users\Mobile\Desktop\galeria\9.jfif" class="card-img-top" alt="..." />
+              <img
+                src="c:\Users\Mobile\Desktop\galeria\12.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
-                <p class="card-text">
-                  Area de ensino pratico com design.
-                </p>
+                <p class="card-text">Area de design 3D.</p>
               </div>
             </div>
           </div>
           <div class="col-4">
             <div class="card">
-              <img src="c:\Users\Mobile\Desktop\galeria\10.png" class="card-img-top" alt="..." />
+              <img
+                src="c:\Users\Mobile\Desktop\galeria\10.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
-                <p class="card-text">Area de ensino diministrativo.</p>
+                <p class="card-text">Area de design 2D.</p>
               </div>
             </div>
           </div>
           <div class="col-4">
             <div class="card">
-              <img src="c:\Users\Mobile\Desktop\galeria\12.png" class="card-img-top" alt="..." />
+              <img
+                src="c:\Users\Mobile\Desktop\galeria\12.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
-                <p class="card-text">Area de ensino de desing de jogos.</p>
+                <p class="card-text">Area de animação 2D,3D.</p>
               </div>
-
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card">
+              <img
+                src="c:\Users\Mobile\Desktop\galeria\10.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="card-text">Area de design 2D.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card">
+              <img
+                src="c:\Users\Mobile\Desktop\galeria\12.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="card-text">Area de animação 2D,3D.</p>
+              </div>
+            </div>
+          </div>
+        </div> 
+      </div>
+    </div>
+  </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
