--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,23 @@
           
         </section>      
         </div>
+        <div id="servicos" class="block">
+          <div class="container">
+              <h2 class="title text-center">Nossos Serviços</h2>
+              <h4 class="subtitle text-center mb-4">Et sumi kapa namur aondeai rocus pocus</h4> 
+            <div class="row">
+              <div class="col-lg-3 col-md-6 mb-4 mb-lg-0"></div>
+                <a href="#" class="destaque">
+                  <div class="img-container mb-3">
+                    <img src="../img/Yanyt.png">
+                  </div>
+                  <h5>Et sumi kapo</h5>
+                  <p class="mb-0">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium</p>
+
+                </a>
+              </div>  
+            </div>
+        </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
