--- a/src/Rinex.html
+++ b/src/Rinex.html
@@ -238,7 +238,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="../img/camp doisdois.png"
+                src="../img/CARROSS DOIS TERC.png"
                 class="d-block w-100"
                 alt="..."
               />
